No need for a static method and constructor that are equal